@@ -11,9 +11,18 @@
          <param name="debugchance" type="internal" default="0"/>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       </params>
+      <location object="$STATION" condition="@$STATION != null"/>
    </order>
 
    <interrupts>
+      <handler>
+         <conditions>
+            <event_object_entered_live_view object="$STATION"/>
+         </conditions>
+         <actions>
+            <signal_objects object="this.ship" param="'MOVE_TO_OBJECT_INTERRUPT'"/>
+         </actions>
+      </handler>
       <handler ref="AttackHandler"/>
       <handler ref="MissileLockHandler" />
       <handler ref="ScannedHandler"/>
@@ -61,29 +70,14 @@
          <set_command command="command.investigate"/>
          <set_command_action commandaction="commandaction.calculating"/>
 
-         <set_value name="$_IsKnown" exact="false"/>
-         <do_if value="$STATION.isconstruction">
-            <get_safe_pos result="$_Position" sector="$STATION" object="$STATION.buildstorage" directionobject="$SECTOR" direction="quadrant.up" y="4km"/>
-            <do_if value="$STATION.isinliveview or ($_Ship.distanceto.[$SECTOR, $_Position] le $_Ship.maxradarrange)">
-               <set_value name="$_TradesKnown" exact="true"/>
-            </do_if>
-         </do_if>
-         <do_else>
-            <get_safe_pos result="$_Position" sector="$SECTOR" object="$STATION" directionobject="$SECTOR" direction="quadrant.up" y="4km"/>
-            <check_object result="$_TradesKnown" object="$STATION">
-               <match tradesknownto="$_Ship.owner"/>
-            </check_object>
-         </do_else>
-
-         <create_order id="'JP_lib_MoveToObject'" object="$_Ship" immediate="true" chance="if not $_TradesKnown then 100 else 0">
-            <param name="SECTOR"                value="$SECTOR"/>
-            <param name="OBJECT"                value="if $STATION.isconstruction then $STATION.buildstorage else $STATION"/>
-            <param name="POSITION"              value="$_Position"/>
-            <param name="INTERRUPT_ON_LIVEVIEW" value="true"/>
-         </create_order>
-         <wait exact="1ms"/>
+         <run_script name="'jp.lib.MoveToObject'">
+            <param name="OBJECT" value="(if $STATION.isconstruction then $STATION.buildstorage else $STATION)"/>
+            <param name="DIRECTION_OBJECT" value="$_Ship"/>
+            <param name="DISTANCE_TO_OBJECT" value="5km"/>
+         </run_script>
 
          <set_command_action commandaction="commandaction.standingby"/>
+         <wait exact="1000ms"/>
 
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
